@@ -66,6 +66,7 @@ ENTRYPOINT ["sh","-c","\
   export HOSTNAME=$(hostname) && \
   envsubst < /opt/scouter-agent/conf/scouter.conf.src > /opt/scouter-agent/conf/scouter.conf && \
   java \
+    --add-opens java.base/java.lang=ALL-UNNAMED \
     -javaagent:/opt/scouter-agent/scouter.agent.jar \
     -Dscouter.config=/opt/scouter-agent/conf/scouter.conf \
     -jar /app/app.jar \
